--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="col-xl-3 col-lg-2">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="../img/logo/logo-napis.png" alt="" style="width: 80%">
+                                <img src="img/logo/logo-napis.png" alt="" style="width: 80%">
                             </a>
                         </div>
                     </div>
@@ -519,7 +519,7 @@
                     <div class="footer_widget">
                         <div class="footer_logo">
                             <a href="#">
-                                <img src="../img/logo/Logo-napis-bialy.png" alt="" style="width: 100%">
+                                <img src="./img/logo/Logo-napis-bialy.png" alt="" style="width: 100%">
                             </a>
                         </div>
                         <p>
