--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="col-xl-3 col-lg-2">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="img/logo/logo-napis.png" alt="" style="width: 80%">
+                                <img src="./img/logo/logo-napis.png" alt="" style="width: 80%">
                             </a>
                         </div>
                     </div>
