--- a/firmowe/index.html
+++ b/firmowe/index.html
@@ -97,14 +97,13 @@
 </header>
 
 
-
 <div class="bradcam_area breadcam_bg_2 bradcam_overlay">
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h3>Contact</h3>
-                    <p><a href="../index.html">Home /</a> Contact</p>
+                    <h3>Kredyty firmowe</h3>
+                    <p><a href="../index.html">Home /</a> Kredyty firmowe</p>
                 </div>
             </div>
         </div>
@@ -112,43 +111,50 @@
 </div>
 
 
-<section class="contact-section">
-    <div class="container">
 
-    <div class="row">
-        <div class="col-12">
-            <h2 class="contact-title">Jak dojechać</h2>
-        </div>
-        <div class="col-lg-8">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5524.991782078987!2d18.58148095664578!3d54.39278702742157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1580034045648!5m2!1spl!2spl"
-                    width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        <div class="col-lg-3 offset-lg-1">
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-home"></i></span>
-                <div class="media-body">
-                    <h3>80-307 Gdańsk</h3>
-                    <p>Abrahama 1a <br> lok 6.10 - V p.</p>
-                </div>
-            </div>
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-                <div class="media-body">
-                    <h3>+48 501 511 904</h3>
-                    <p>Poniedziałek - Piątek <br> 9 - 18</p>
-                </div>
-            </div>
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-email"></i></span>
-                <div class="media-body">
-                    <h3>kontakt@finconcept.pl</h3>
-                    <p></p>
+<div class="welcome_docmed_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-8 col-lg-8">
+                <div class="welcome_docmed_info">
+                    <h2>Finanse</h2>
+                    <h3> Kredyty firmowe </h3>
+
+                    <p>Kredyty firmowe – to kredyty dla osób prowadzących działalność gospodarczą,
+spółek nieposiadających osobowości prawnej, spółek kapitałowych.</p>
+
+<p>Rodzaje kredytów:</p>
+
+<ul>
+    <li>
+        <i class="flaticon-right"></i>
+        Kredyt obrotowy
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        Kredyty deweloperskie
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        Kredyt inwestycyjny
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        Pożyczka hipoteczna
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        Kredyt w rachunku bieżącym
+    </li>
+</ul>
+
+
                 </div>
             </div>
         </div>
     </div>
-        </div>
-</section>
+</div>
+
 
 <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="../js/vendor/jquery-1.12.4.min.js"></script>
