--- a/hipoteczne/index.html
+++ b/hipoteczne/index.html
@@ -97,14 +97,13 @@
 </header>
 
 
-
 <div class="bradcam_area breadcam_bg_2 bradcam_overlay">
     <div class="container">
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h3>Contact</h3>
-                    <p><a href="../index.html">Home /</a> Contact</p>
+                    <h3>Kredyty hipoteczne</h3>
+                    <p><a href="../index.html">Home /</a> Kredyty hipoteczne</p>
                 </div>
             </div>
         </div>
@@ -112,43 +111,122 @@
 </div>
 
 
-<section class="contact-section">
-    <div class="container">
 
-    <div class="row">
-        <div class="col-12">
-            <h2 class="contact-title">Jak dojechać</h2>
-        </div>
-        <div class="col-lg-8">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5524.991782078987!2d18.58148095664578!3d54.39278702742157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1580034045648!5m2!1spl!2spl"
-                    width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-        <div class="col-lg-3 offset-lg-1">
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-home"></i></span>
-                <div class="media-body">
-                    <h3>80-307 Gdańsk</h3>
-                    <p>Abrahama 1a <br> lok 6.10 - V p.</p>
-                </div>
-            </div>
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-                <div class="media-body">
-                    <h3>+48 501 511 904</h3>
-                    <p>Poniedziałek - Piątek <br> 9 - 18</p>
-                </div>
-            </div>
-            <div class="media contact-info">
-                <span class="contact-info__icon"><i class="ti-email"></i></span>
-                <div class="media-body">
-                    <h3>kontakt@finconcept.pl</h3>
-                    <p></p>
+<div class="welcome_docmed_area">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12 col-lg-12">
+                <div class="welcome_docmed_info">
+                    <h2>Finanse</h2>
+                    <h3> Kredyty hipoteczne </h3>
+                    <p>
+                        Produkty hipoteczne są to kredyty lub pożyczki zabezpieczone hipoteką na nieruchomości. Najważniejszym parametrem, którym kierujemy się przy wyborze kredytu jest oprocentowanie oraz koszty pozyskania finansowania.
+                    </p>
                 </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-xl-12 col-lg-12">
+                <div class="welcome_docmed_info">
+                    <p>Oferta obejmuje kredyty hipoteczne na:</p>
+
+<ul>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup mieszkania lub domu
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        budowa domu
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        wykończenie, remont, rozbudowa lub modernizacja mieszkania lub domu
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup siedliska lub domku letniskowego
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup działki budowlanej
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup garażu
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        przekształcenie lokatorskiego lub własnościowego spółdzielczego prawa do lokalu
+        w prawo własności
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        wykup mieszkania komunalnego lub zakładowego
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup domu jednorodzinnego z częścią usługową
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        zakup nieruchomości mieszkalnej w celach inwestycyjnych
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        spłata kredytu zaciągniętego na cele mieszkaniowe w innym banku – refinansowanie
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        spłata innych kredytów i pożyczek zaciągniętych w innych bankach  – konsolidacja
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        cel nieokreślony
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        nabycie udziału we współwłasności nieruchomości
+    </li>
+</ul>
+
+<p>Waluty kredytu</p>
+
+<ul>
+    <li>
+        <i class="flaticon-right"></i>
+        PLN
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        EUR
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        USD
+    </li>
+    <li>
+        <i class="flaticon-right"></i>
+        GBP
+    </li>
+</ul>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xl-12 col-lg-12">
+                <div class="welcome_docmed_info">
+                    Jednym ze sposobów na uzyskanie kredytu hipotecznego bez wkładu własnego jest zabezpieczenie zobowiązania inną nieruchomością lub kredyt gotówkowy.
+                </div>
+            </div>
+        </div>
+
     </div>
-        </div>
-</section>
+</div>
+
 
 <script src="../js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="../js/vendor/jquery-1.12.4.min.js"></script>
