--- a/contact/index.html
+++ b/contact/index.html
@@ -30,23 +30,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-md-6 ">
-                        <div class="social_media_links">
-                            <a href="#">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
-                        </div>
+                        
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="short_contact_list">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-envelope"></i> info@finconcept.com</a></li>
-                                <li><a href="#"> <i class="fa fa-phone"></i> 58 123 456 12</a></li>
+                                <li><a href="#"> <i class="fa fa-envelope"></i>kontakt@finconcept.pl</a></li>
+                                <li><a href="#"> <i class="fa fa-phone"></i>791 511 904</a></li>
                             </ul>
                         </div>
                     </div>
@@ -103,8 +93,8 @@
         <div class="row">
             <div class="col-xl-12">
                 <div class="bradcam_text">
-                    <h3>Contact</h3>
-                    <p><a href="../index.html">Home /</a> Contact</p>
+                    <h3>Kontakt</h3>
+                    <p><a href="../index.html">Home /</a> Kontakt</p>
                 </div>
             </div>
         </div>
@@ -134,7 +124,7 @@
             <div class="media contact-info">
                 <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                 <div class="media-body">
-                    <h3>+48 501 511 904</h3>
+                    <h3>791 511 904</h3>
                     <p>Poniedziałek - Piątek <br> 9 - 18</p>
                 </div>
             </div>
