--- a/leasing/index.html
+++ b/leasing/index.html
@@ -30,23 +30,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-md-6 ">
-                        <div class="social_media_links">
-                            <a href="#">
-                                <i class="fa fa-linkedin"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
-                        </div>
+                        
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="short_contact_list">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-envelope"></i> info@finconcept.com</a></li>
-                                <li><a href="#"> <i class="fa fa-phone"></i> 58 123 456 12</a></li>
+                                <li><a href="#"> <i class="fa fa-envelope"></i>kontakt@finconcept.pl</a></li>
+                                <li><a href="#"> <i class="fa fa-phone"></i>791 511 904</a></li>
                             </ul>
                         </div>
                     </div>
