--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="col-xl-4 col-md-4">
                 <div class="single_service">
                     
-                    <h3>Kredyty hipoteczne</h3>
+                    <h3>Kredyty hipoteczne i inne</h3>
                     <p>Kredyty lub pożyczki zabezpieczone hipoteką na nieruchomości. </p>
                     
                 </div>
